# CertifAi22

./: .dockerignore  .env  .env.example  .gitignore  4 Registro de Asistencia (respuestas).xlsx  Dockerfile  FORMULARIO DE ASISTENCIA 05-Feb-2026  (respuestas).xlsx  README.md  docker-compose.yml  documentation.md  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  requirements.txt  ruff.toml
.claude/: settings.local.json
.claude/docs/: CertifAI_Analisis_de_Caso.docx  generar_word.py  index.html
.claude/plan/: 00_README.md  01_evaluacion_arquitectura.md  02_bugs_corregidos.md  03_nueva_arquitectura.md  04_fases_refactor.md  05_fases_api_rest.md  06_fases_ia.md  07_tests_deploy.md  08_tesis_capitulos.md  09_meet_integration.md  10_meet_ai_pitch.md  Certifai_AI_Minutes_Pitch.docx  RESUMEN_TIEMPOS.md  _build_pitch_docx.py
.github/workflows/: ci.yml
admin_panel/: backends.py  context_processors.py  forms.py  urls.py  views.py  views_firmas.py
admin_panel/views/: __init__.py  _shared.py  ai_config.py  auth.py  batch.py  certificate.py  design.py  design_system.py  google_oauth.py  landing.py  leaders.py  session.py
api/: urls.py
api/admin/: urls.py
api/auth/: register.py  serializers.py  urls.py  views.py
api/common/: permissions.py  viewsets.py
api/public/: urls.py
config/: __init__.py  celery.py  settings.py  urls.py
core/: admin.py  models.py  validators.py
core/base/: __init__.py  decorators.py  fields.py  mixins.py  models.py
core/managers/: __init__.py  certificado.py  (+3 more)
docs/: ARCHITECTURE.md  MODELO_BD.md
mobile/: .gitignore  README.md  app.json  babel.config.js  package-lock.json  package.json
public/: context_processors.py  urls.py  views.py
scripts/: seed_demo_account.py
templates/: 400.html  403.html  404.html  500.html  base_error.html
tests/: conftest.py  factories.py  test_api_auth.py  test_api_sessions.py  test_audit.py  test_critical_flows.py  test_managers.py  test_pdf_strategy.py
(+334 files in other folders)
